[package]
name = "rusty-sheet"
version = "0.1.0"
authors = ["Dor Shahaf <soapseller@gmail.com>"]
edition = "2021"

[features]
default = ["druidui"]
skiaui = ["skia-safe", "glutin", "gl"]
druidui = [ "druid" ]
python = ["pyo3"]

[dependencies]
skia-safe = { version = "*", features = ["egl", "wayland"], optional = true }
glutin = { version = "0.28", optional = true }
gl = { version = "0.14.0", optional = true }

druid = { version = "0.7.0", optional = true }

pest = "2.1"
pest_derive = "2.1"

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]
optional = true
